# operator

./: CMakeLists.txt  README.md  auto_list.py
config/: config_sys.yaml
include/: AI_modular.cpp  AI_modular.h  Motor_Control.cpp  Motor_Control.h  age_gender.cpp  age_gender.h  cascade_classifer.cpp  cascade_classifer.h
src/: operator.cpp
